# tuyang_switchplate_2

./: .gitignore  CMakeLists.txt  inference.cpp  inference.h  main.cpp
